--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,34 @@
     <title>Vacation Manager</title></head>
 <body>
 <br>
-<center><h1> Home page </h1></center>
+<center>
+    <div class="transbox">
+        <h1 style="background-color: white"> Vacation Management </h1>
+    </div>
+</center>
+
+    <header>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">View Team</a></li>
+            </ul>
+        </nav>
+        <a class="navButton" href="#"><button>Request vacation</button></a>
+    </header>
+<div class="accountButtons">
+    <center>
+        <button class="Loginbutton">Login</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <form action="/gotoregister" method="post">
+            <button class="Registerbutton">Register</button>
+        </form>
+    </center>
+</div>
+
 </body>
 </html>
